# pywebanim

./: README.md  pyproject.toml
examples/: scene.py
pywebanim/: __init__.py  cli.py  html.py  renderer.py  utils.py
