
[project]
name = "pywebanim"
version = "0.1.0"
description = "Embed Manim animations into HTML"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Some Person" }]
dependencies = ["manim"]

[project.urls]
Homepage = "https://github.com/akishore15/pywebanim"

[project.scripts]
pywebanim = "pywebanim.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
